app tile clickability on tablet (bug 1118367)

--- a/src/media/css/tiles.styl
+++ b/src/media/css/tiles.styl
@@ -20,6 +20,7 @@ $greater-than-mobile = unquote('(min-width: 330px)');
     display: block;
     overflow: hidden;
     position: relative;
+    z-index: 1;  // Any other overlay can overlap.
 
     &:hover {
         text-decoration: none;
